<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    <TextView 
        style="@style/dialog_txt_style_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_one"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<TextView 
        style="@style/dialog_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_two"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<TextView 
        style="@style/dialog_txt_style_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_three"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<TextView 
        style="@style/dialog_txt_style_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_four"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<TextView 
        style="@style/dialog_txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_five"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<TextView 
        style="@style/dialog_txt_style_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_transfer_line_six"
        android:layout_marginTop="@dimen/dialog_transfer_row_margin"/>
	<ImageView 
	    android:id="@+id/img_QRCode"
	    android:layout_width="200dp"
	    android:layout_height="200dp"
	    android:layout_marginTop="@dimen/dialog_transfer_row_margin"
	    android:contentDescription="@string/action_settings"/>
</LinearLayout>
