<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/dialog_txt_style_point" 
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/dialog_txt_style" 
            android:layout_marginLeft="5dp"
            android:text="@string/dialog_question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            style="@style/dialog_txt_style_point" 
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/dialog_txt_style" 
            android:layout_marginLeft="5dp"
            android:text="@string/dialog_question_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            style="@style/dialog_txt_style_point" 
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/dialog_txt_style" 
            android:layout_marginLeft="5dp"
            android:text="@string/dialog_question_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            style="@style/dialog_txt_style_point" 
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/dialog_txt_style" 
            android:layout_marginLeft="5dp"
            android:text="@string/dialog_question_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
