<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/game_room_name"
        style="@style/game_txt_style_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_room_name" />
	<TextView 
	    android:layout_centerInParent="true"
	    android:layout_marginTop="20dp"
	    android:id="@+id/game_txt_waiting"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/game_room_waiting"
	    style="@style/game_txt_style_big"
	    android:gravity="center"
	    android:layout_below="@id/game_room_name"/>
	<TextView 
	    android:layout_centerInParent="true"
	    android:layout_marginTop="20dp"
	    android:id="@+id/game_btn_start"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/game_room_start"
	    style="@style/game_txt_style_big"
	    android:gravity="center"
	    android:layout_below="@id/game_room_name"
	    android:background="@drawable/game_btn_choice"/>
</RelativeLayout>
